<resources>
    <string name="app_name">Automobile Supply Control</string>
    <string name="nickname">Nickname</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cleaned">Cleaned</string>
    <string name="empty_fields">Empty fields</string>
    <string name="travel_car">Travel car</string>
    <string name="automobile_type">Automobile Type</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="pickup">Pickup</string>
    <string name="truck">Truck</string>
    <string name="others">Others</string>
    <string name="brand">Brand</string>
    <string name="caoa_cherry" translatable="false">Caoa Cherry</string>
    <string name="hyundai" translatable="false">Hyundai</string>
    <string name="mercedes_benz" translatable="false">Mercedes Benz</string>
    <string name="fiat" translatable="false">Fiat</string>
    <string name="renault" translatable="false">Renault</string>
    <string name="alfa_romeo" translatable="false">Alfa Romeo</string>
    <string name="land_rover" translatable="false">Land Rover</string>
    <string name="volkswagen" translatable="false">Volkswagen</string>
    <string name="chevrolet" translatable="false">Chevrolet</string>
    <string name="ford" translatable="false">Ford</string>
    <string name="toyota" translatable="false">Toyota</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="manufactoring_year">Manufactoring Year</string>
    <string name="type">Type</string>
    <string name="was_clicked">" was clicked!"</string>
    <string name="listing_automobile">Listing Automobile</string>
    <string name="objective">This application will help the user to control the fuel supply of the automobile and the amount of kilometers traveled per liter or also called economy.</string>
    <string name="author" translatable="false">Lucas Akio Ogawa</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_automobile">Add Automobile</string>
    <string name="edit_automobile">Edit Automobile</string>
    <string name="city_car">City Car</string>
    <string name="asc" translatable="false">Asc</string>
    <string name="desc" translatable="false">Desc</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type_of_fuel">Type Of Fuel</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="fuel_station">Fuel Station</string>
    <string name="date">Date</string>
    <string name="additive_gasoline">Additive Gasoline</string>
    <string name="premium_gasoline">Premium Gasoline</string>
    <string name="ethanol">Ethanol</string>
    <string name="ethanol_additive">Ethanol Additive</string>
    <string name="common_diesel">Common Diesel</string>
    <string name="diesel_s_10">Diesel S-10</string>
    <string name="diesel_additive">Diesel Additive</string>
    <string name="premium_diesel">Premium Diesel</string>
    <string name="regular_gasoline">Regular Gasoline</string>
    <string name="kilometers">Kilometers</string>
    <string name="liters">Liters</string>
    <string name="automobile">Automobile</string>
    <string name="add_supply">Add Supply</string>
    <string name="edit_supply">Edit Supply</string>
    <string name="alert">Alert</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="no_automobiles_added" type="id">No Automobiles Added</string>
    <string name="it_will_remove_all_supplies">It will remove all supplies</string>
</resources>